# sdlfw

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt
src/core/assets/: .assets.h.swo  animation.cpp  animation.h  animator.cpp  animator.h  resourcemanager.h  scrolltexture.h  spritesheet.cpp  spritesheet.h  texture.cpp  texture.h  waveanimator.cpp  waveanimator.h
src/core/entity/: camera.cpp  camera.h  entity.cpp  entity.h  entitybase.h  entitybase_impl.h  sceneentity.h
src/core/math/: aabb.h  random.h  vec.h  vec2.h  vec3.h
src/core/physics/: collisions.cpp  collisions.h
src/core/renderer/: debugrenderer.cpp  debugrenderer.h  entityrenderer.cpp  entityrenderer.h  rendererall.cpp  rendererall.h  rendereropt.cpp  rendereropt.h
src/core/scene/: bftscene.h  horderscene.cpp  horderscene.h  scene.h
src/core/sdlapp/: sdlapp.cpp  sdlapp.h
src/core/util/: timer.h
src/games/__TEMPLATE__/: constants.h  frogapp.cpp  frogapp.h
src/games/__TEMPLATE__/assets/: assets.h  texturequeue.h  tilequeue.cpp  tilequeue.h
src/games/__TEMPLATE__/entity/: bullet.cpp  bullet.h  enemy.cpp  enemy.h  entityfactory.cpp  entityfactory.h  player.cpp  player.h  powerup.cpp  powerup.h  spawner.cpp  spawner.h
src/games/frog/: Main.cpp  constants.h  frogapp.cpp  frogapp.h  gameinfo.h
src/games/frog/assets/: assets.h  tilequeue.h
src/games/frog/entity/: bullet.cpp  bullet.h  enemy.cpp  enemy.h  entitydecl.h  entitydef.h  entityfactory.cpp  (+7 more)
src/games/tortas/: Main.cpp  constants.h  tortasapp.cpp  tortasapp.h
src/tools/boxedit/: Main.cpp  boxapp.cpp  boxapp.h
(+20 files in other folders)
